--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   db:
-    image: mysql:latest
+    image: mariadb:10.9.3 
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
@@ -17,6 +17,7 @@ services:
     ports:
       - 3030:80
     environment:
+      - PMA_PORT=3308
       - PMA_USER=root
       - PMA_PASSWORD=1234
       - UPLOAD_LIMIT=300M
