--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,27 @@ version: '3.9'
 
 services:
   db:
-    image: mariadb:10.9.3 
+    image: mysql:5.6.50
+    container_name: db
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: 1234
+      MYSQL_USER: root
+      MYSQL_PASSWORD: 1234
+    ports:
+      - "3306:3306"
     volumes:
       - ./db_data:/var/lib/mysql
-    ports:
-      - "3308:3306"
 
   phpmyadmin:
+    depends_on:
+      - db
     image: phpmyadmin
+    container_name: phpmyadmin
     restart: always
     ports:
-      - 3030:80
+      - 3031:80
     environment:
-      - PMA_PORT=3308
       - PMA_USER=root
       - PMA_PASSWORD=1234
       - UPLOAD_LIMIT=300M
