--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '3.9'
 
 services:
   db:
-    image: mysql:5.6.50
+    # image: mysql:5.6.50
+    image: mariadb
     container_name: db
     restart: always
     environment:
@@ -17,7 +18,8 @@ services:
   phpmyadmin:
     depends_on:
       - db
-    image: phpmyadmin
+    # image: phpmyadmin
+    image: phpmyadmin:5.2.0
     container_name: phpmyadmin
     restart: always
     ports:
